// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-compass__nav-search"
  >
    <button
      aria-label="Search"
      class="pf-v6-c-button pf-m-plain pf-m-circle"
      data-ouia-component-id="OUIA-Generated-Button-plain-9"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="none"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.166 14.166L17.4993 17.4993"
            stroke="currentcolor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M2.5 9.16667C2.5 12.8486 5.48477 15.8333 9.16667 15.8333C11.0108 15.8333 12.6801 15.0846 13.887 13.8744C15.0897 12.6685 15.8333 11.0044 15.8333 9.16667C15.8333 5.48477 12.8486 2.5 9.16667 2.5C5.48477 2.5 2.5 5.48477 2.5 9.16667Z"
            stroke="currentcolor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Matches the snapshot with custom props 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-compass__nav-search custom-class"
  >
    <button
      aria-label="Custom search"
      class="pf-v6-c-button pf-m-plain pf-m-circle"
      data-ouia-component-id="OUIA-Generated-Button-plain-10"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="none"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.166 14.166L17.4993 17.4993"
            stroke="currentcolor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M2.5 9.16667C2.5 12.8486 5.48477 15.8333 9.16667 15.8333C11.0108 15.8333 12.6801 15.0846 13.887 13.8744C15.0897 12.6685 15.8333 11.0044 15.8333 9.16667C15.8333 5.48477 12.8486 2.5 9.16667 2.5C5.48477 2.5 2.5 5.48477 2.5 9.16667Z"
            stroke="currentcolor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;
